--- a/app/index.html
+++ b/app/index.html
@@ -45,16 +45,64 @@
             </div>
 
                 <ul class="bottom-info">
-                    <li>Индивидуальные консультации</li>
-                    <li>Трансформационные игры</li>
-                    <li>Семинары / тренинги</li>
-                    <li>Бесплатные онлайн мастерклассы</li>
+                    <li>
+                        <span></span>
+                        <p>Индивидуальные консультации</p>
+                    </li>
+                    <li>
+                        <span></span>
+                        <p>Трансформационные игры</p>
+                    </li>
+                    <li>
+                        <span></span>
+                        <p>Семинары / тренинги</p>
+                    </li>
+                    <li>
+                        <span></span>
+                        <p>Бесплатные онлайн мастерклассы</p>
+                    </li>
                 </ul>
 
         </div>
         <div class="main-section_right">
             <p class="main-signature">Ирина Дарси<br>психолог-психотерапевт</p>
         </div>
+    </section>
+
+    <section class="about-me">
+        <div class="row">
+            <div class="default-section_left col-lg-6">
+                <h3 class="default-head">Несколько слов обо мне</h3>
+                <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
+            </div>
+            <div class="default-section_right col-lg-6">
+                <iframe></iframe>
+            </div>
+        </div>
+        <div class="about-features row">
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+            <div class="one-feature col-lg-2 col-sm-4 col-12">
+                <p>Индивидуальные консультации</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="top-appeals">
+
     </section>
 </main>
 
