3 sections ready + 6 sections html

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
             <a href="tel:+380971234567">+38 (097) 1234567</a>
             <a href="tel:+380971234567">+38 (097) 1234567</a>
         </div>
-        <button type="button" class="call-button">Заказать звонок</button>
+        <button type="button" class="main-button" id="call-btn">Заказать звонок</button>
     </div>
     <div class="socials-links">
         <a href="">
@@ -102,6 +102,61 @@
     </section>
 
     <section class="top-appeals">
+        <div class="top-appeals_left"></div>
+        <div class="top-appeals_right">
+            <h3 class="default-head">Топ 6 популярных обращений ко мне</h3>
+            <div class="row">
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+                <div class="one-feature col-lg-4">
+                    <p>Индивидуальные консультации</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="subscribe-section">
+        <div class="subscribe-section_left">
+            <h3 class="default-head">В знак нашего знакомства</h3>
+            <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
+        </div>
+        <div class="subscribe-section_right">
+            <h3 class="default-head">Получить видео и подписаться</h3>
+            <div class="buttons-wrap">
+                <button type="button" class="main-button" id="facebook-btn">Facebook</button>
+                <button type="button" class="main-button" id="email-btn">Email</button>
+            </div>
+        </div>
+    </section>
+
+    <section class="gallery-section">
+        <h3 class="default-head">Мои семинары и тренинги, как это происходит</h3>
+        <div class="photo-wrapper"></div>
+    </section>
+
+    <section class="videofeedback-section">
+        <h3 class="default-head">Видеоотзывы моих клиентов</h3>
+        <div class="videofeedback-wrapper">
+            <div class="videofeedback-row"></div>
+            <button type="button" class="main-button" id="client-btn">Email</button>
+            <div class="facebook-subscribe"></div>
+        </div>
+    </section>
+
+    <section class="contacts-section">
 
     </section>
 </main>
