--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v3.2"></script>
 <header>
     <div class="header_left">
         <div class="logo-name">Irina Darsi</div>
@@ -144,21 +146,98 @@
 
     <section class="gallery-section">
         <h3 class="default-head">Мои семинары и тренинги, как это происходит</h3>
-        <div class="photo-wrapper"></div>
+        <div class="photo-wrapper">
+            <div class="one-photo photo-item1">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item2">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item3">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item4">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item5">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item6">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item7">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item8">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item9">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item10">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item11">
+                <img src="#">
+            </div>
+            <div class="one-photo photo-item12">
+                <img src="#">
+            </div>
+        </div>
     </section>
 
     <section class="videofeedback-section">
         <h3 class="default-head">Видеоотзывы моих клиентов</h3>
         <div class="videofeedback-wrapper">
-            <div class="videofeedback-row"></div>
-            <button type="button" class="main-button" id="client-btn">Email</button>
-            <div class="facebook-subscribe"></div>
+            <div class="videofeedback-row row">
+                <div class="onefeedback-wrapper col-lg-4 col-sm-12">
+                    <iframe></iframe>
+                </div>
+                <div class="onefeedback-wrapper col-lg-4 col-sm-12">
+                    <iframe></iframe>
+                </div>
+                <div class="onefeedback-wrapper col-lg-4 col-sm-12">
+                    <iframe></iframe>
+                </div>
+            </div>
+            <button type="button" class="main-button" id="client-btn">Хочу стать клиентом</button>
+            <div class="facebook-subscribe">
+                <div class="fb-page" data-href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" data-width="600" data-height="200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/">Ирина Дарси - Дар Силы</a></blockquote></div>
+            </div>
         </div>
     </section>
 
     <section class="contacts-section">
-
+        <div class="contacts-section_left">
+            <h3 class="default-head">Контакты</h3>
+            <p class="default-info">+38 (097) 1234567</p>
+            <p class="default-info">+38 (097) 1234567</p>
+            <p class="default-info">tjyukui;@gmail.com</p>
+        </div>
+        <div class="contacts-section_right">
+            <h3 class="default-head">Опишите ситуацию</h3>
+            <form class="contacts-form">
+                <span class="error-message"></span>
+                <div class="input-field">
+                    <input id="name" type="text" placeholder="Имя" required>
+                </div>
+                <div class="input-field">
+                    <input id="email" type="text" placeholder="Электронная почта" required>
+                </div>
+                <div class="input-field">
+                    <textarea placeholder="Имя" required></textarea>
+                </div>
+                <button type="button" class="main-button">Отправить</button>
+            </form>
+        </div>
     </section>
+    <footer>
+        <p class="default-info">Irina Darsi &#169;</p>
+        <div class="default-info">
+            <button type="button">Хочу стать клиентом</button>
+        </div>
+
+    </footer>
 </main>
 
 <script src="js/scripts.min.js>"></script>
