--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v3.2"></script>
-<header>
+<header class="main-header">
     <div class="header_left">
         <div class="logo-name">Irina Darsi</div>
         <div class="lang-switch">
@@ -18,7 +18,7 @@
             <button type="button" class="lang-button">en</button>
             <button type="button" class="lang-button">de</button>
         </div>
-        <button type="button" class="read-blog">Читать блог</button>
+        <button type="button" class="transparent-button">Читать блог</button>
     </div>
     <div class="header_right">
         <div class="phones">
@@ -202,7 +202,7 @@
             </div>
             <button type="button" class="main-button" id="client-btn">Хочу стать клиентом</button>
             <div class="facebook-subscribe">
-                <div class="fb-page" data-href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" data-width="600" data-height="200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/">Ирина Дарси - Дар Силы</a></blockquote></div>
+                <div class="fb-page" data-href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" data-width="900" data-height="200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/">Ирина Дарси - Дар Силы</a></blockquote></div>
             </div>
         </div>
     </section>
@@ -225,12 +225,16 @@
                     <input id="email" type="text" placeholder="Электронная почта" required>
                 </div>
                 <div class="input-field">
-                    <textarea placeholder="Имя" required></textarea>
+                    <textarea required></textarea>
                 </div>
-                <button type="button" class="main-button">Отправить</button>
+                <div class="button-wrapper">
+                    <button type="button" class="transparent-button">Отправить</button>
+                </div>
             </form>
         </div>
     </section>
+
+
     <footer>
         <p class="default-info">Irina Darsi &#169;</p>
         <div class="default-info">
@@ -240,7 +244,7 @@
     </footer>
 </main>
 
-<script src="js/scripts.min.js>"></script>
-<script src="js/common.js>"></script>
+<script src="js\scripts.min.js"></script>
+<script src="js\common.js"></script>
 </body>
 </html>
