--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,9 @@
         <div class="main-section_left">
             <div class="top-info">
                 <h1>Irina Darsi</h1>
-                <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
+                <p class="default-info">Мы живем во Времени Больших Перемен.
+                    Это сложно...но в этом великое счастье. Оказаться перед Выбором...
+                    и выбрать Себя Настоящего. Себя Настоящую</p>
                 <button type="button" class="buy-button">Приобрести онлайн тренинг</button>
             </div>
 
@@ -72,32 +74,32 @@
     </section>
 
     <section class="about-me">
-        <div class="row">
+        <div class="row left-right-wrapper">
             <div class="default-section_left col-lg-6">
                 <h3 class="default-head">Несколько слов обо мне</h3>
                 <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
             </div>
             <div class="default-section_right col-lg-6">
-                <iframe></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/zo0EJFabs_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
         <div class="about-features row">
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
-            <div class="one-feature col-lg-2 col-sm-4 col-12">
+            <div class="one-feature col-xl-2 col-lg-4 col-md-4 col-12">
                 <p>Индивидуальные консультации</p>
             </div>
         </div>
@@ -133,7 +135,9 @@
     <section class="subscribe-section">
         <div class="subscribe-section_left">
             <h3 class="default-head">В знак нашего знакомства</h3>
-            <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
+            <p class="default-info">Мы все не просто учимся. Мы становимся друзьями и партнерами.
+                Потому что есть то, что нас всех объединяет.
+                Мы дышим любовью!</p>
         </div>
         <div class="subscribe-section_right">
             <h3 class="default-head">Получить видео и подписаться</h3>
@@ -202,7 +206,7 @@
             </div>
             <button type="button" class="main-button" id="client-btn">Хочу стать клиентом</button>
             <div class="facebook-subscribe">
-                <div class="fb-page" data-href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" data-width="900" data-height="200" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/%D0%98%D1%80%D0%B8%D0%BD%D0%B0-%D0%94%D0%B0%D1%80%D1%81%D0%B8-%D0%94%D0%B0%D1%80-%D0%A1%D0%B8%D0%BB%D1%8B-142110353090046/">Ирина Дарси - Дар Силы</a></blockquote></div>
+                <div class="fb-page" data-href="https://m.facebook.com/irinadarsiofficial" data-small-header="false" data-width="600" data-hide-cover="false" data-show-facepile="false"><blockquote cite="https://m.facebook.com/irinadarsiofficial" class="fb-xfbml-parse-ignore"><a href="https://m.facebook.com/irinadarsiofficial">Ирина Дарси - Дар Силы</a></blockquote></div>
             </div>
         </div>
     </section>
