--- a/app/index.html
+++ b/app/index.html
@@ -110,22 +110,22 @@
         <div class="top-appeals_right">
             <h3 class="default-head">Топ 6 популярных обращений ко мне</h3>
             <div class="row">
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
-                <div class="one-feature col-lg-4">
+                <div class="one-feature col-xl-4 col-lg-6">
                     <p>Индивидуальные консультации</p>
                 </div>
             </div>
