responsive md complete

--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,11 @@
     </div>
     <div class="header_right">
         <div class="phones">
-            <a href="tel:+380971234567">+38 (097) 1234567</a>
-            <a href="tel:+380971234567">+38 (097) 1234567</a>
+            <a class="phone-number" href="tel:+380971234567">+38 (097) 1234567</a>
+            <a class="phone-number" href="tel:+380971234567">+38 (097) 1234567</a>
+            <a class="call-icon" href="#">
+                <i class="fas fa-phone"></i>
+            </a>
         </div>
         <button type="button" class="main-button" id="call-btn">Заказать звонок</button>
     </div>
