--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,13 @@
                 <i class="fas fa-phone"></i>
             </a>
         </div>
-        <button type="button" class="main-button" id="call-btn">Заказать звонок</button>
+        <button type="button" class="main-button big-button" id="call-btn">
+            <span>Заказать звонок</span>
+            <i class="fas fa-phone"></i>
+        </button>
+        <!--<button type="button" class="main-button small-button" id="call-btn">-->
+            <!--<i class="fas fa-phone"></i>-->
+        <!--</button>-->
     </div>
     <div class="socials-links">
         <a href="">
@@ -78,11 +84,11 @@
 
     <section class="about-me">
         <div class="row left-right-wrapper">
-            <div class="default-section_left col-lg-6">
+            <div class="about-me-section_left col-lg-6">
                 <h3 class="default-head">Несколько слов обо мне</h3>
                 <p class="default-info">Насколько сильно наша жизнь зависит от того, как мы сами ее воспринимаем, какую выбираем оптику? Стоит ли сознательно «включать» оптимизм и учиться радоваться наполовину полному стакану?</p>
             </div>
-            <div class="default-section_right col-lg-6">
+            <div class="about-me-section_right col-lg-6">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/zo0EJFabs_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
