--- a/app/index.html
+++ b/app/index.html
@@ -241,7 +241,7 @@
                     <textarea required></textarea>
                 </div>
                 <div class="button-wrapper">
-                    <button type="button" class="transparent-button">Отправить</button>
+                    <button type="button" class="transparent-button" id="blog">Отправить</button>
                 </div>
             </form>
         </div>
