--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
     <link rel="apple-touch-icon-precomposed" href="img/favicon_IrinaDarsi-apple-touch-icon.png">
 </head>
 <body>
+<div class="preloader">
+    <div class='sk-spinner sk-spinner-pulse'></div>
+</div>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ru_RU/sdk.js#xfbml=1&version=v3.2"></script>
 <header class="main-header">
