--- a/app/index.html
+++ b/app/index.html
@@ -240,20 +240,23 @@
         </div>
         <div class="contacts-section_right">
             <h3 class="default-head">Опишите ситуацию</h3>
-            <form class="contacts-form">
-                <span class="error-message"></span>
-                <span class="submit-message"></span>
+            <form class="contacts-form" id="contacts-form">
+                <span class="error-message contacts-error-general"></span>
+                <span class="submit-message contacts-submit"></span>
                 <div class="input-field">
-                    <input id="name" type="text" placeholder="Имя" required>
+                    <input name="name" type="text" class="contacts-form-item" placeholder="Имя">
+                    <span class="error-message"></span>
                 </div>
                 <div class="input-field">
-                    <input id="email" type="text" placeholder="Электронная почта" required>
+                    <input name="email" type="text" class="contacts-form-item" placeholder="Электронная почта" required>
+                    <span class="error-message"></span>
                 </div>
                 <div class="input-field">
-                    <textarea required></textarea>
+                    <textarea required class="contacts-form-item" placeholder="Введите сообщение"></textarea>
+                    <span class="error-message"></span>
                 </div>
                 <div class="button-wrapper">
-                    <button type="button" class="transparent-button" id="blog">Отправить</button>
+                    <button type="button" class="transparent-button send-contact-form">Отправить</button>
                 </div>
             </form>
         </div>
@@ -272,22 +275,25 @@
     <button class="close-call-popup">&#10006</button>
     <div class="order-call-popup_wrap">
         <form class="callback-form">
-            <span class="error-message"></span>
-            <span class="submit-message"></span>
+            <span class="error-message callback-error-general"></span>
+            <span class="submit-message callback-submit"></span>
             <div class="input-field">
-                <input id="name" type="text" placeholder="Имя" required>
+                <input name="name" class="callback-form-item" type="text" placeholder="Имя" required>
+                <span class="error-message"></span>
             </div>
             <div class="input-field">
-                <input id="phone" type="text" placeholder="Номер телефона" required>
+                <input name="phone" class="callback-form-item" type="text" placeholder="Номер телефона" required>
+                <span class="error-message"></span>
             </div>
             <div class="button-wrapper">
-                <button type="button" class="transparent-button" id="blog">Отправить</button>
+                <button type="button" class="transparent-button send-callback">Отправить</button>
             </div>
         </form>
     </div>
 </div>
 
-<script src="js\scripts.min.js"></script>
-<script src="js\common.js"></script>
+<script type="text/javascript" src="js\scripts.min.js"></script>
+<script type="text/javascript" src="js\common.js"></script>
+<script type="text/javascript" src="js\main.js"></script>
 </body>
 </html>
